[package]
name = "tket2-hseries"
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true

license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/tket2-hseries"
homepage.workspace = true
repository.workspace = true
description = "TKET2 tool for preparing and validating `Hugr`s for compilation targeting Quantinuum H-series  quantum computers"
keywords = ["Quantum", "Quantinuum"]
categories = ["compilers"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:hugr-cli"]

[[bin]]
name = "tket2-hseries"
required-features = ["cli"]

[dependencies]
hugr.workspace = true
tket2 = { path = "../tket2", version = "0.7.3" }
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
smol_str.workspace = true
strum = { workspace = true, features = ["derive"]}
itertools.workspace = true
clap = { workspace = true, optional = true }
hugr-cli = { workspace = true, optional = true }
derive_more = { workspace = true, features = [
    "error",
    "display",
    "from",
    "into",
] }
typetag.workspace = true
delegate.workspace = true

[dev-dependencies]
cool_asserts.workspace = true
petgraph.workspace = true
rstest.workspace = true

[lints]
workspace = true
