[project]
name = "tket2"
version = "0.12.0"
requires-python = ">=3.10"
description = "[Renamed] Quantinuum's TKET2 Quantum Compiler"
license = { file = "LICENCE" }
readme = "README.md"
authors = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
maintainers = [
    { name = "TKET development team", email = "tket-support@quantinuum.com" },
]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = []

[tool.uv.sources]
tket2_eccs = { workspace = true }
tket2_exts = { workspace = true }

[project.urls]
homepage = "https://github.com/CQCL/tket2/tree/main/tket-py"
repository = "https://github.com/CQCL/tket2/tree/main/tket-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# Lark throws deprecation warnings for `src_parse` and `src_constants`.
filterwarnings = "ignore::DeprecationWarning:lark.*"

[tool.pyright]
# Rust bindings have typing stubs but no python source code.
reportMissingModuleSource = "none"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[[tool.mypy.overrides]]
# Ignore errors in tikv-jemalloc.
module = "gen_run_tests.*"
ignore_errors = true
