[package]
name = "portgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.28"
pyo3 = { version = "0.16.5", optional = true, features = [
    "multiple-pymethods",
] }

[features]
pyo3 = ["dep:pyo3"]
[dev-dependencies]
rstest = "0.12.0"
